<resources>
  <string name="app_name">Material Colors BETA</string>
  <string name="primary_color">Primary Color</string>
  <string name="accent_color">Accent Color</string>
  <string name="background_color">Background Color</string>
  <string name="coming_soon">Coming soon…</string>
  <string name="status_bar_color">Status Bar Color</string>
  <string name="setting">setting</string>
  <string name="fake_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>
