<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/holo_green_light"
    tools:context="me.droan.materialcolors.MainActivity"
    >
  <android.support.design.widget.AppBarLayout
      android:id="@+id/appBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size_x2"
        style="@style/Widget.AppCompat.Toolbar"
        />
  </android.support.design.widget.AppBarLayout>

  <android.support.v7.widget.GridLayout
      android:id="@+id/gridLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingTop="@dimen/action_bar_size_x2"
      app:columnCount="2"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <Button
        android:id="@+id/colorPrimary1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/primary_color"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorPrimary2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        tools:text="# Color"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorStatus1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/status_bar_color"
        android:visibility="gone"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorStatus2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:visibility="gone"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        tools:text="# Color"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorAccent1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/accent_color"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorAccent2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        tools:text="# Color"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorBackground1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/background_color"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <Button
        android:id="@+id/colorBackground2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        tools:text="# Color"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
  </android.support.v7.widget.GridLayout>
  <Button
      android:id="@+id/settings"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen_16"
      android:text="@string/setting"
      android:visibility="gone"
      app:layout_anchor="@id/gridLayout"
      app:layout_anchorGravity="bottom|end"
      style="@style/Widget.AppCompat.Button.Small"
      />
  <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/fab_margin"
      app:fabSize="normal"
      app:layout_anchor="@id/toolbar"
      app:layout_anchorGravity="bottom|end"
      />
</android.support.design.widget.CoordinatorLayout>
